Fix adobe xd right align

--- a/index.css
+++ b/index.css
@@ -246,6 +246,7 @@ ul{
     display: flex;
     /* box-shadow: 0px 0px 2px #7575757c; */
 border-radius: 10px;
+overflow: hidden;
 
 }
 .vert-card .card-img{
